[bumpversion]
current_version = 0.0.0
commit = True
tag = False

[bumpversion:file:media_hoard/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = media_hoard
version = attr: media_hoard.__version__
description = Automated podcast and media management system
long_description = file: README.rst, CHANGELOG.rst, AUTHORS.rst
keywords = hosted.by.github
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
setup_requires =
    setuptools

install_requires =
    click
    django
    django_extensions
    feedparser
    python-dateutil
    requests

[options.entry_points]
console_scripts =
    media-hoard = media_hoard.__main__:cli
